# AI-Powered-ToDo-List

./: .env  .gitignore  AI_NATIVE_OPTIMIZATION_REPORT.md  AZURE_OPENAI_SETUP.md  DOCKER_README.md  LAYOUT_OPTIMIZATION_REPORT.md  README-ANALYTICS.md  README.md  USER_MANAGEMENT_README.md  build-frontend.sh  clean-all.sh  docker-compose.prod.yml  docker-compose.yml  docker-mirrors.md  index.html  migrate_tasks.py  requirements.txt  start-dev.sh  start-fullstack.sh  start-quick.sh  start-services.sh  start-watch.sh  start.sh  stop-dev.sh  stop-services.sh  test_ai_intelligence.sh  test_azure_openai.py  test_conversation_persistence.sh  test_frontend_login.js  test_note_auth.html  test_postgres_tasks.py  test_siliconflow_api.py  wget-log
backend/: Dockerfile  Dockerfile.optimized  env.example  init.sql  pyproject.toml  requirements.txt
backend/migrations/: add_user_role.sql
backend/src/: __init__.py  app.py  database.py  langgraph_config.py
backend/src/agents/: __init__.py  agent.py  agent_wrapper.py  checkpointer.py  dbconf.py  langgraph_agent.py  llm_config.py  postgres_config.py  prompt.py  prompt_config.py  tools.py
backend/src/auth/: __init__.py  dependencies.py
backend/src/integrations/: celery_client.py
backend/src/models/: __init__.py  analytics.py  auth.py  database_models.py  memory.py  note.py  schedule.py
backend/src/routes/: __init__.py  admin.py  analytics.py  api.py  auth.py  note.py  schedule.py  smart_search.py
backend/src/services/: __init__.py  admin_init_service.py  analytics_service.py  auth_service.py  conversation_service.py  (+10 more)
(+131 files in other folders)
